float_eq/tests/derive_tests/debug_ulps_diff/debug_ulps_diff_missing_type_name.stderr
error: Missing debug ULPs diff type name required to derive trait.

help: try adding `#[float_eq(debug_ulps_diff = "MyComplex32DebugUlpsDiff")]` to your type.
 --> $DIR/debug_ulps_diff_missing_type_name.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, FloatEqDebugUlpsDiff)]
  |                                         ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
